--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ background-repeat: no-repeat;
   height: 220px;
   width: 220px;
   padding: 10px 10px;
+  transform:scale(5.5);
 }
 .showcases .row p{
   margin-top: 300px;
