--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ background-repeat: no-repeat;
   width: 220px;
   padding: 10px 10px;
 
-    transition: transform .2s;
+    transition: transform 3s;
 }
 img.image:hover{
     transform:scale(0.2);
