--- a/css/style.css
+++ b/css/style.css
@@ -217,11 +217,11 @@ background-repeat: no-repeat;
   width: 220px;
   padding: 10px 10px;
 
-  transition: transform 3s;
+  /*--transition: transform 3s;--*/
 }
-img.image:hover{
+/*--img.image:hover{
     transform:scale(1);
-}
+}--*/
 .showcases .row p{
   margin-top: 300px;
   font-size: 15px;
