--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,19 @@ background-repeat: no-repeat;
 
 
 
+.imgLink { border: none; background: none; }
+.imgLink img
+{
+  height: 8rem;
+}
+.imgLink:active img, .imgLink:focus img
+{
+  height: 16rem;
+}
+
+
+
+
 .showcases .row p{
   margin-top: 300px;
   font-size: 15px;
