--- a/css/style.css
+++ b/css/style.css
@@ -228,11 +228,11 @@ background-repeat: no-repeat;
 .imgLink { border: none; background: none; }
 .imgLink img
 {
-  height: 8rem;
+  height: 80px;
 }
 .imgLink:active img, .imgLink:focus img
 {
-  height: 16rem;
+  height: 160px;
 }
 
 
