--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,21 @@ background-position: center center;
 background-repeat: no-repeat;
 }
 
+
+
+
+.imgLink { border: none; background: none; }
+.imgLink img
+{
+  height: 8rem;
+}
+.imgLink:active img, .imgLink:focus img
+{
+  height: 16rem;
+}
+
+
+
 .image {
   height: 220px;
   width: 220px;
