--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,7 @@ background-repeat: no-repeat;
   overflow: hidden;
   overflow-y: scroll;
   padding-right: 80px;
+  margin-left: 30px;
 }
 ::-webkit-scrollbar {
   width: 0px;
