--- a/css/style.css
+++ b/css/style.css
@@ -282,3 +282,19 @@ background-repeat: no-repeat;
   justify-content: center;
   align-items: center;
 }
+
+.port {
+  width: 232px;
+  height: 327px;
+  padding: 5px 5px;
+}
+.land{
+  height: 327px;
+  width: 466px; 
+  padding: 5px 5px;
+}
+.slide {
+  width: 1230px;
+  overflow: hidden;
+  overflow-x: scroll;
+}
