--- a/css/style.css
+++ b/css/style.css
@@ -300,10 +300,11 @@ background-repeat: no-repeat;
 }
 .writeups h1{
   color: #ffff;
+    align-items: center;
 }
 .writeups{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px 50px;
+  padding: 150px 150px;
 }
